@@ -170,7 +170,7 @@ my %defaults;
 BEGIN {
   require Exporter;
   @ISA = qw(Exporter);
-  $VERSION = '0.75_01';
+  $VERSION = '0.75_02';
   eval {
     require XSLoader;
     XSLoader::load(Imager => $VERSION);
